force-app/main/default/objects/Account/fields/ARR_GP__c.field-meta.xml
<CustomField>
    <fullName>ARR_GP__c</fullName>
    <label>ARR GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>