force-app/main/default/objects/Account/fields/ARR_L11__c.field-meta.xml
<CustomField>
    <fullName>ARR_L11__c</fullName>
    <label>ARR L11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>