force-app/main/default/objects/Account/fields/ARR_LevelEleven__c.field-meta.xml
<CustomField>
    <fullName>ARR_LevelEleven__c</fullName>
    <label>ARR LevelEleven</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>