force-app/main/default/objects/Account/fields/ARR_Licensed_Assignment_Areas__c.field-meta.xml
<CustomField>
    <fullName>ARR_Licensed_Assignment_Areas__c</fullName>
    <label>ARR Licensed Assignment Areas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>