force-app/main/default/objects/Account/fields/ARR_Licensed_Users_Geopointe__c.field-meta.xml
<CustomField>
    <fullName>ARR_Licensed_Users_Geopointe__c</fullName>
    <label>ARR Licensed Users Geopointe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>