force-app/main/default/objects/Account/fields/Current_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_ARR__c</fullName>
    <label>Current ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>