force-app/main/default/objects/Account/fields/GP_Warm_Score__c.field-meta.xml
<CustomField>
    <fullName>GP_Warm_Score__c</fullName>
    <label>GP Warm Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>