force-app/main/default/objects/Account/fields/GP_Warm_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>GP_Warm_Score_Date__c</fullName>
    <label>GP Warm Score Date</label>
    <type>DateTime</type>
</CustomField>