force-app/main/default/objects/Account/fields/Licensed_Areas__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Areas__c</fullName>
    <label>Licensed Areas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>