force-app/main/default/objects/Account/fields/Licensed_Users_GP__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Users_GP__c</fullName>
    <label>Licensed Users GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>