force-app/main/default/objects/Account/fields/Number_of_Sales_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sales_Employees__c</fullName>
    <label>Number of Sales Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>