force-app/main/default/objects/Account/fields/Sales_Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team_Size__c</fullName>
    <label>Sales Team Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>