force-app/main/default/objects/Account/fields/Total_ARR_Geopointe__c.field-meta.xml
<CustomField>
    <fullName>Total_ARR_Geopointe__c</fullName>
    <label>Total ARR Geopointe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>