force-app/main/default/objects/Account/fields/Total_GeoPointe_ARR__c.field-meta.xml
<CustomField>
    <fullName>Total_GeoPointe_ARR__c</fullName>
    <label>Total GeoPointe ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>