force-app/main/default/objects/Account/fields/Zoom_Clean_SIC_Codes__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Clean_SIC_Codes__c</fullName>
    <label>Zoom Clean SIC Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>