force-app/main/default/objects/Account/fields/Zoom_Clean_Technology_Products__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Clean_Technology_Products__c</fullName>
    <label>Zoom Clean Technology Products</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>